--- a/src/VirtoCommerce.SqlQueries.Data/VirtoCommerce.SqlQueries.Data.csproj
+++ b/src/VirtoCommerce.SqlQueries.Data/VirtoCommerce.SqlQueries.Data.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="DinkToPdfCopy" Version="1.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="NPOI" Version="2.7.4" />
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.876.0" />
     <PackageReference Include="VirtoCommerce.Platform.Data.MySql" Version="3.876.0" />
     <PackageReference Include="VirtoCommerce.Platform.Data.PostgreSql" Version="3.876.0" />
