--- a/src/VirtoCommerce.SqlQueries.Data.SqlServer/VirtoCommerce.SqlQueries.Data.SqlServer.csproj
+++ b/src/VirtoCommerce.SqlQueries.Data.SqlServer/VirtoCommerce.SqlQueries.Data.SqlServer.csproj
@@ -19,4 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.SqlQueries.Data\VirtoCommerce.SqlQueries.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
